--- a/gateway/default.conf.template
+++ b/gateway/default.conf.template
@@ -28,6 +28,11 @@ upstream backend {
   server backend:8080 max_fails=0;
 }
 
+upstream fua-generator {
+  server fua-generator:3000 max_fails=3 fail_timeout=10s;
+  keepalive 16;
+}
+
 ${FUA_CONFIG}
 
 server {
@@ -103,6 +108,24 @@ server {
 
   location = / {
     return 301 /openmrs/spa/home;
+  }
+
+  location = /services/fua-generator {
+    return 301 /services/fua-generator/;
+  }
+
+  location /services/fua-generator/ {
+    proxy_pass http://fua-generator/;
+    proxy_redirect http://$host/ /services/fua-generator/;
+
+    # Si el upstream falla, devolver 503 con mensaje personalizado
+    error_page 502 503 504 = @fua_unavailable;
+  }
+
+  # Location para manejar cuando fua-generator no está disponible
+  location @fua_unavailable {
+    add_header Content-Type application/json always;
+    return 503 '{"error": "FUA Generator service is temporarily unavailable", "status": 503}';
   }
 }
 
