--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,8 +97,47 @@ services:
       - db-data:/var/lib/mysql
       - db-backup:/backup
 
+  fua-generator:
+    container_name: peruHCE-fua-generator
+    image: marcelius733/fua-generator:dev-0.1.4
+    ports:
+      - "3333:3000"
+    #env_file: "enviromentVariables.env"
+    environment:
+      DB_USER: ${PERUHCE_FUA_GEN_DB_USER:-fuagenerator}
+      DB_PASSWORD: ${PERUHCE_FUA_GEN_DB_PASSWORD:-fuagenerator}
+      DB_NAME: ${PERUHCE_FUA_GEN_DB:-fuagenerator}      
+      TOKEN: ${PERUHCE_FUA_GEN_TOKEN:-fuagenerator}
+    depends_on:
+      - fua-generator-db
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:3000/" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
+
+fua-generator-db:
+    container_name: peruHCE-fua-generator-db
+    image: postgres:17
+    ports:
+      - "5433:5432"
+    environment:
+      POSTGRES_USER: ${PERUHCE_FUA_GEN_DB_USER:-fuagenerator}
+      POSTGRES_PASSWORD: ${PERUHCE_FUA_GEN_DB_PASSWORD:-fuagenerator}
+      POSTGRES_DB: ${PERUHCE_FUA_GEN_DB:-fuagenerator}
+    volumes:
+      - db-fua-generator:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${PERUHCE_FUA_GEN_DB_USER:-fuagenerator} -d ${PERUHCE_FUA_GEN_DB:-fuagenerator}" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+
 volumes:
   openmrs-data: ~
   db-data: ~
   db-backup: ~
   gateway-data: ~
+  db-fua-generator: ~
