--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -22,14 +24,16 @@
     <distro.spaConfigDir>${distro.baseDir}/spa_config</distro.spaConfigDir>
 
     <!-- track module versions
-         we do so here so that we can utilise Maven to track updates, etc. -->    
+         we do so here so that we can utilise Maven to track updates, etc. -->
     <openmrs.version>2.8.0</openmrs.version>
     <initializer.version>2.9.0</initializer.version>
     <fhir2.version>2.8.0</fhir2.version>
     <webservices.rest.version>3.0.0</webservices.rest.version>
     <addresshierarchy.version>2.21.0</addresshierarchy.version>
     <idgen.version>4.14.0</idgen.version>
-    <!--TODO: LEGACY UI TIENE UN BUG IMPORTANTE PERO SENCILLO, YA EXISTE EL FIX PERO TODAVIA NO LA NUEVA VERSION CON ESE FIX APLICADO POR EL MOMENTO SE ESTA HACIENDO UN WORKAROUND EN ESE MODULO-->
+    <!--TODO:
+    LEGACY UI TIENE UN BUG IMPORTANTE PERO SENCILLO, YA EXISTE EL FIX PERO TODAVIA NO LA NUEVA
+    VERSION CON ESE FIX APLICADO POR EL MOMENTO SE ESTA HACIENDO UN WORKAROUND EN ESE MODULO-->
     <legacyui.version>2.0.0-SNAPSHOT</legacyui.version>
     <metadatamapping.version>1.6.0</metadatamapping.version>
     <openconceptlab.version>2.4.0</openconceptlab.version>
@@ -55,9 +59,9 @@
     <billing.version>1.3.3-SNAPSHOT</billing.version>
     <!-- <fua.version>1.0.22</fua.version> -->
     <!-- <imaging.version>1.1.5-SNAPSHOT</imaging.version> -->
+    <!-- <appframework.version>2.18.0</appframework.version>-->
     <!-- UI Framework modules (required by imaging)-->
     <!-- <appui.version>1.18.0</appui.version>-->
-    <!-- <appframework.version>2.18.0</appframework.version>-->
     <!-- <uiframework.version>4.0.0</uiframework.version>-->
     <!-- <uicommons.version>2.26.0</uicommons.version>-->
     <!-- Content Packages -->
@@ -65,7 +69,8 @@
     <!-- <oauth2login.version>1.6.0</oauth2login.version> -->
     <!-- <vaccination-schedule.version>1.0.9</vaccination-schedule.version> -->
     <sihsalus.content.version>1.1.0</sihsalus.content.version>
-    <sihsalus.content.url>https://github.com/PROYECTO-SANTACLOTILDE/sihsalus-content-referenceapplication/releases/download/v${sihsalus.content.version}/sihsalus-${sihsalus.content.version}-SNAPSHOT.zip</sihsalus.content.url>
+    <sihsalus.content.url>
+      https://github.com/PROYECTO-SANTACLOTILDE/sihsalus-content-referenceapplication/releases/download/v${sihsalus.content.version}/sihsalus-${sihsalus.content.version}-SNAPSHOT.zip</sihsalus.content.url>
   </properties>
 
   <dependencies>
@@ -99,7 +104,8 @@
     </dependency>
     -->
 
-    <!-- UI Framework Modules (required by imaging) - COMMENTED OUT: Not needed for O3, causing dependency conflicts -->
+    <!-- UI Framework Modules (required by imaging) - COMMENTED OUT: Not needed for O3, causing
+    dependency conflicts -->
     <!--
     <dependency>
       <groupId>org.openmrs.module</groupId>
@@ -428,15 +434,15 @@
             </goals>
             <configuration>
               <target>
-                <echo message="Downloading SIH SALUS content package from GitHub..."/>
-                <mkdir dir="${project.build.directory}/content-download"/>
+                <echo message="Downloading SIH SALUS content package from GitHub..." />
+                <mkdir dir="${project.build.directory}/content-download" />
                 <get src="${sihsalus.content.url}"
-                     dest="${project.build.directory}/content-download/sihsalus-content.zip"
-                     verbose="true"
-                     usetimestamp="true"/>
-                <echo message="Extracting SIH SALUS content package..."/>
+                  dest="${project.build.directory}/content-download/sihsalus-content.zip"
+                  verbose="true"
+                  usetimestamp="true" />
+                <echo message="Extracting SIH SALUS content package..." />
                 <unzip src="${project.build.directory}/content-download/sihsalus-content.zip"
-                       dest="${project.build.directory}/sihsalus-content"/>
+                  dest="${project.build.directory}/sihsalus-content" />
               </target>
             </configuration>
           </execution>
@@ -448,25 +454,29 @@
             </goals>
             <configuration>
               <target>
-                <mkdir dir="${project.build.directory}/sdk-distro/web/openmrs_config"/>
+                <mkdir dir="${project.build.directory}/sdk-distro/web/openmrs_config" />
                 <!-- Copy SIH SALUS backend configuration -->
-                <echo message="Copying SIH SALUS backend configuration to openmrs_config..."/>
+                <echo message="Copying SIH SALUS backend configuration to openmrs_config..." />
                 <copy todir="${project.build.directory}/sdk-distro/web/openmrs_config">
-                  <fileset dir="${project.build.directory}/sihsalus-content/configuration/backend_configuration"/>
+                  <fileset
+                    dir="${project.build.directory}/sihsalus-content/configuration/backend_configuration" />
                 </copy>
                 <!-- Copy SIH SALUS frontend configuration -->
-                <echo message="Copying SIH SALUS frontend configuration..."/>
+                <echo message="Copying SIH SALUS frontend configuration..." />
                 <copy todir="${project.build.directory}/sdk-distro/web" failonerror="false">
-                  <fileset dir="${project.build.directory}/sihsalus-content/configuration/frontend_configuration"/>
+                  <fileset
+                    dir="${project.build.directory}/sihsalus-content/configuration/frontend_configuration" />
                 </copy>
                 <!-- Copy content.properties -->
                 <copy file="${project.build.directory}/sihsalus-content/content.properties"
-                      todir="${project.build.directory}/sdk-distro/web/openmrs_config"
-                      failonerror="false"/>
-                <!-- Copy local overrides (if they exist) - these will overwrite content package files -->
-                <echo message="Copying local configuration overrides (if any)..."/>
-                <copy todir="${project.build.directory}/sdk-distro/web/openmrs_config" failonerror="false" overwrite="true">
-                  <fileset dir="${project.basedir}/configuration" erroronmissingdir="false"/>
+                  todir="${project.build.directory}/sdk-distro/web/openmrs_config"
+                  failonerror="false" />
+                <!-- Copy local overrides (if they exist) - these will overwrite content package
+                files -->
+                <echo message="Copying local configuration overrides (if any)..." />
+                <copy todir="${project.build.directory}/sdk-distro/web/openmrs_config"
+                  failonerror="false" overwrite="true">
+                  <fileset dir="${project.basedir}/configuration" erroronmissingdir="false" />
                 </copy>
               </target>
             </configuration>
