Actualiza versiones de dependencias y agrega archivo de ensamblaje para la distribución

--- a/distro/distro.properties
+++ b/distro/distro.properties
@@ -7,10 +7,10 @@ omod.webservices.rest=${webservices.rest.version}
 omod.idgen=${idgen.version}
 omod.legacyui=${legacyui.version}
 omod.addresshierarchy=${addresshierarchy.version}
-omod.metadatamapping=${metadatamapping.version}
-#omod.metadatasharing=${metadatasharing.version}
+omod.patientdocuments=${patientdocuments.version}
+#omod.metadatamapping=${metadatamapping.version}
 omod.openconceptlab=${openconceptlab.version}
-#omod.referencedemodata=${referencedemodata.version}
+omod.referencedemodata=${referencedemodata.version}
 omod.attachments=${attachments.version}
 omod.queue=${queue.version}
 omod.appointments=${appointments.version}
@@ -31,10 +31,11 @@ omod.authentication=${authentication.version}
 omod.emrapi=${emrapi.version}
 omod.event.groupId=org.openmrs
 omod.event=${event.version}
-#omod.oauth2login=${oauth2login.version}
 omod.bedmanagement=${bedmanagement.version}
 omod.stockmanagement=${stockmanagement.version}
 omod.billing=${billing.version}
+content.sihsalus=${sihsalus-content.version}
+#omod.oauth2login=${oauth2login.version}
 #omod.datafilter=${datafilter.version}
 #omod.fua=${fua.version}
 #omod.vaccination-schedule=${vaccination-schedule.version}
@@ -43,8 +44,3 @@ omod.billing=${billing.version}
 #omod.appframework=${appframework.version}
 #omod.uiframework=${uiframework.version}
 #omod.uicommons=${uicommons.version}
-
-# SIH SALUS Content Package
-# Note: Content package is downloaded directly from GitHub releases via maven-antrun-plugin
-# See distro/pom.xml for download and extraction configuration
-#content.sihsalus=${sihsalus.content.version}
