--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -25,34 +25,34 @@
 
     <!-- track module versions
          we do so here so that we can utilise Maven to track updates, etc. -->
-    <openmrs.version>2.8.0</openmrs.version>
+    <openmrs.version>2.8.3</openmrs.version>
     <initializer.version>2.9.0</initializer.version>
-    <fhir2.version>2.8.0</fhir2.version>
-    <webservices.rest.version>3.0.0</webservices.rest.version>
+    <fhir2.version>3.0.0-SNAPSHOT</fhir2.version>
+    <webservices.rest.version>3.1.0-SNAPSHOT</webservices.rest.version>
     <addresshierarchy.version>2.21.0</addresshierarchy.version>
+    <patientdocuments.version>1.0.0-SNAPSHOT</patientdocuments.version>
     <idgen.version>4.14.0</idgen.version>
-    <!--TODO:
-    LEGACY UI TIENE UN BUG IMPORTANTE PERO SENCILLO, YA EXISTE EL FIX PERO TODAVIA NO LA NUEVA
-    VERSION CON ESE FIX APLICADO POR EL MOMENTO SE ESTA HACIENDO UN WORKAROUND EN ESE MODULO-->
     <legacyui.version>2.0.0-SNAPSHOT</legacyui.version>
-    <metadatamapping.version>1.6.0</metadatamapping.version>
-    <openconceptlab.version>2.4.0</openconceptlab.version>
-    <attachments.version>3.7.0</attachments.version>
+    <metadatamapping.version>2.0.0-SNAPSHOT</metadatamapping.version>
+    <openconceptlab.version>2.6.0-SNAPSHOT</openconceptlab.version>
+    <attachments.version>4.0.0-SNAPSHOT</attachments.version>
+    <referencedemodata.version>2.6.1-SNAPSHOT</referencedemodata.version>
     <queue.version>2.9.0</queue.version>
     <appointments.version>2.1.0-20250318.070530-1</appointments.version>
     <teleconsultation.version>2.1.0-20250318.154145-1</teleconsultation.version>
     <cohort.version>3.7.3</cohort.version>
-    <authentication.version>2.0.0-SNAPSHOT</authentication.version>
-    <reporting.version>1.28.0</reporting.version>
+    <authentication.version>2.2.0-SNAPSHOT</authentication.version>
+    <reporting.version>2.1.0-SNAPSHOT</reporting.version>
     <reportingrest.version>1.15.0</reportingrest.version>
+    <!-- the next three are required for reporting -->
     <calculation.version>1.3.0</calculation.version>
-    <htmlwidgets.version>1.12.0-SNAPSHOT</htmlwidgets.version>
-    <serialization-xstream.version>0.2.16</serialization-xstream.version>
+    <htmlwidgets.version>2.0.1</htmlwidgets.version>
+    <serialization-xstream.version>0.4.0-SNAPSHOT</serialization-xstream.version>
     <ordertemplates.version>1.0.2</ordertemplates.version>
     <patientflags.version>3.0.8</patientflags.version>
     <o3forms.version>2.3.0</o3forms.version>
-    <emrapi.version>2.3.0</emrapi.version>
-    <event.version>3.0.0</event.version>
+    <emrapi.version>3.2.1</emrapi.version>
+    <event.version>4.0.0-SNAPSHOT</event.version>
     <bedmanagement.version>6.2.0-SNAPSHOT</bedmanagement.version>
     <!-- Stock Management and Billing -->
     <stockmanagement.version>3.0.0-SNAPSHOT</stockmanagement.version>
@@ -68,9 +68,9 @@
     <!-- <datafilter.version>2.2.0</datafilter.version> -->
     <!-- <oauth2login.version>1.6.0</oauth2login.version> -->
     <!-- <vaccination-schedule.version>1.0.9</vaccination-schedule.version> -->
-    <sihsalus.content.version>1.1.0</sihsalus.content.version>
-    <sihsalus.content.url>
-      https://github.com/PROYECTO-SANTACLOTILDE/sihsalus-content-referenceapplication/releases/download/v${sihsalus.content.version}/sihsalus-${sihsalus.content.version}-SNAPSHOT.zip</sihsalus.content.url>
+
+    <!-- Content Packages -->
+    <sihsalus-content.version>1.1.0</sihsalus-content.version>
   </properties>
 
   <dependencies>
@@ -174,6 +174,12 @@
     </dependency>
     <dependency>
       <groupId>org.openmrs.module</groupId>
+      <artifactId>patientdocuments-omod</artifactId>
+      <version>${patientdocuments.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
       <artifactId>metadatamapping-omod</artifactId>
       <version>${metadatamapping.version}</version>
       <scope>provided</scope>
@@ -190,14 +196,12 @@
       <version>${attachments.version}</version>
       <scope>provided</scope>
     </dependency>
-    <!--
     <dependency>
       <groupId>org.openmrs.module</groupId>
       <artifactId>referencedemodata-omod</artifactId>
       <version>${referencedemodata.version}</version>
       <scope>provided</scope>
     </dependency>
-    -->
     <dependency>
       <groupId>org.openmrs.module</groupId>
       <artifactId>queue-omod</artifactId>
@@ -282,14 +286,12 @@
       <version>${bedmanagement.version}</version>
       <scope>provided</scope>
     </dependency>
-
     <dependency>
       <groupId>org.openmrs.module</groupId>
       <artifactId>stockmanagement-omod</artifactId>
       <version>${stockmanagement.version}</version>
       <scope>provided</scope>
     </dependency>
-
     <dependency>
       <groupId>org.openmrs.module</groupId>
       <artifactId>billing-omod</artifactId>
@@ -345,15 +347,6 @@
     </dependency>
     -->
 
-    <!-- Peru HCE Content Package (temporarily disabled for CI/dev builds)
-    <dependency>
-      <groupId>org.peruhce</groupId>
-      <artifactId>peruhce-content</artifactId>
-      <version>${peruhce-content.version}</version>
-      <classifier>content</classifier>
-      <type>zip</type>
-    </dependency>
-    -->
   </dependencies>
 
   <build>
@@ -377,6 +370,7 @@
                   <directory>${project.basedir}</directory>
                   <includes>
                     <include>distro.properties</include>
+                    <include>distro-no-demo.properties</include>
                   </includes>
                   <filtering>true</filtering>
                 </resource>
@@ -404,81 +398,19 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <executions>
-          <!--
-              <execution>
-                <id>unpack-content-package</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>unpack-dependencies</goal>
-                </goals>
-                <configuration>
-                  <includeGroupIds>org.peruhce</includeGroupIds>
-                  <includeArtifactIds>peruhce-content</includeArtifactIds>
-                  <outputDirectory>${project.build.directory}/content-package</outputDirectory>
-                </configuration>
-              </execution>
-          -->
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-antrun-plugin</artifactId>
+        <artifactId>maven-assembly-plugin</artifactId>
         <executions>
           <execution>
-            <id>download-sihsalus-content</id>
-            <phase>process-resources</phase>
-            <goals>
-              <goal>run</goal>
-            </goals>
-            <configuration>
-              <target>
-                <echo message="Downloading SIH SALUS content package from GitHub..." />
-                <mkdir dir="${project.build.directory}/content-download" />
-                <get src="${sihsalus.content.url}"
-                  dest="${project.build.directory}/content-download/sihsalus-content.zip"
-                  verbose="true"
-                  usetimestamp="true" />
-                <echo message="Extracting SIH SALUS content package..." />
-                <unzip src="${project.build.directory}/content-download/sihsalus-content.zip"
-                  dest="${project.build.directory}/sihsalus-content" />
-              </target>
-            </configuration>
-          </execution>
-          <execution>
-            <id>copy-openmrs-configuration</id>
+            <id>package-distro-artifact</id>
             <phase>package</phase>
             <goals>
-              <goal>run</goal>
+              <goal>single</goal>
             </goals>
             <configuration>
-              <target>
-                <mkdir dir="${project.build.directory}/sdk-distro/web/openmrs_config" />
-                <!-- Copy SIH SALUS backend configuration -->
-                <echo message="Copying SIH SALUS backend configuration to openmrs_config..." />
-                <copy todir="${project.build.directory}/sdk-distro/web/openmrs_config">
-                  <fileset
-                    dir="${project.build.directory}/sihsalus-content/configuration/backend_configuration" />
-                </copy>
-                <!-- Copy SIH SALUS frontend configuration -->
-                <echo message="Copying SIH SALUS frontend configuration..." />
-                <copy todir="${project.build.directory}/sdk-distro/web" failonerror="false">
-                  <fileset
-                    dir="${project.build.directory}/sihsalus-content/configuration/frontend_configuration" />
-                </copy>
-                <!-- Copy content.properties -->
-                <copy file="${project.build.directory}/sihsalus-content/content.properties"
-                  todir="${project.build.directory}/sdk-distro/web/openmrs_config"
-                  failonerror="false" />
-                <!-- Copy local overrides (if they exist) - these will overwrite content package
-                files -->
-                <echo message="Copying local configuration overrides (if any)..." />
-                <copy todir="${project.build.directory}/sdk-distro/web/openmrs_config"
-                  failonerror="false" overwrite="true">
-                  <fileset dir="${project.basedir}/configuration" erroronmissingdir="false" />
-                </copy>
-              </target>
+              <appendAssemblyId>false</appendAssemblyId>
+              <descriptors>
+                <descriptor>src/main/assembly/assembly.xml</descriptor>
+              </descriptors>
             </configuration>
           </execution>
         </executions>
@@ -487,6 +419,30 @@
   </build>
 
   <profiles>
+    <profile>
+      <id>no-demo</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.openmrs.maven.plugins</groupId>
+            <artifactId>openmrs-sdk-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>openmrs-sdk:build-distro</id>
+                <goals>
+                  <goal>build-distro</goal>
+                </goals>
+                <phase>package</phase>
+                <configuration>
+                  <distro>${project.build.directory}/distro-no-demo.properties</distro>
+                  <dir>${project.build.directory}/sdk-distro</dir>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
     <profile>
       <id>validator</id>
       <build>
