Actualiza la versión de sihsalus-content a 1.1.1 y habilita la versión de fua en pom.xml; agrega fua a distro.properties

--- a/distro/distro.properties
+++ b/distro/distro.properties
@@ -34,10 +34,10 @@ omod.event=${event.version}
 omod.bedmanagement=${bedmanagement.version}
 omod.stockmanagement=${stockmanagement.version}
 omod.billing=${billing.version}
+omod.fua=${fua.version}
 content.sihsalus=${sihsalus-content.version}
 #omod.oauth2login=${oauth2login.version}
 #omod.datafilter=${datafilter.version}
-#omod.fua=${fua.version}
 #omod.vaccination-schedule=${vaccination-schedule.version}
 #omod.imaging=${imaging.version}
 #omod.appui=${appui.version}
