--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -57,7 +57,7 @@
     <!-- Stock Management and Billing -->
     <stockmanagement.version>3.0.0-SNAPSHOT</stockmanagement.version>
     <billing.version>1.3.3-SNAPSHOT</billing.version>
-    <!-- <fua.version>1.0.22</fua.version> -->
+    <fua.version>1.0.22</fua.version>
     <!-- <imaging.version>1.1.5-SNAPSHOT</imaging.version> -->
     <!-- <appframework.version>2.18.0</appframework.version>-->
     <!-- UI Framework modules (required by imaging)-->
@@ -70,7 +70,7 @@
     <!-- <vaccination-schedule.version>1.0.9</vaccination-schedule.version> -->
 
     <!-- Content Packages -->
-    <sihsalus-content.version>1.1.0</sihsalus-content.version>
+    <sihsalus-content.version>1.1.1</sihsalus-content.version>
   </properties>
 
   <dependencies>
@@ -81,13 +81,11 @@
       <type>war</type>
       <scope>provided</scope>
     </dependency>
-    <!--
     <dependency>
       <groupId>org.openmrs.module</groupId>
       <artifactId>fua-omod</artifactId>
       <version>${fua.version}</version>
     </dependency>
-    -->
     <!-- Custom Module: Vaccination Schedule 
     <dependency>
       <groupId>org.openmrs.module</groupId>
