--- a/credentials/settings.xml.template
+++ b/credentials/settings.xml.template
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<settings xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.2.0 http://maven.apache.org/xsd/settings-1.2.0.xsd" xmlns="http://maven.apache.org/SETTINGS/1.2.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<settings
+  xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.2.0 http://maven.apache.org/xsd/settings-1.2.0.xsd"
+  xmlns="http://maven.apache.org/SETTINGS/1.2.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
   <activeProfiles>
     <activeProfile>github</activeProfile>
@@ -21,6 +23,13 @@
             <enabled>true</enabled>
           </snapshots>
         </repository>
+        <repository>
+          <id>github-sihsalus-content</id>
+          <url>https://maven.pkg.github.com/PROYECTO-SANTACLOTILDE/sihsalus-content-referenceapplication</url>
+          <snapshots>
+            <enabled>true</enabled>
+          </snapshots>
+        </repository>
       </repositories>
     </profile>
   </profiles>
@@ -28,6 +37,11 @@
   <servers>
     <server>
       <id>github</id>
+      <username>${env.GHP_USERNAME}</username>
+      <password>${env.GHP_PASSWORD}</password>
+    </server>
+    <server>
+      <id>github-sihsalus-content</id>
       <username>${env.GHP_USERNAME}</username>
       <password>${env.GHP_PASSWORD}</password>
     </server>
