--- a/frontend/spa-assemble-config.json
+++ b/frontend/spa-assemble-config.json
@@ -42,7 +42,8 @@
       "@openmrs/esm-stock-management-app": "next",
       "@openmrs/esm-system-admin-app": "next",
       "@openmrs/esm-user-onboarding-app": "next",
-      "@openmrs/esm-ward-app": "next"
+      "@openmrs/esm-ward-app": "next",
+      "@pucp-gidis-hiisc/esm-dyaku-app": "next"
     },
     "excludedFrontendModules": []
   }
