Agrega el módulo de frontend para la aplicación FUA en la configuración de ensamblaje SPA.

--- a/frontend/spa-assemble-config.json
+++ b/frontend/spa-assemble-config.json
@@ -43,7 +43,8 @@
       "@openmrs/esm-system-admin-app": "next",
       "@openmrs/esm-user-onboarding-app": "next",
       "@openmrs/esm-ward-app": "next",
-      "@pucp-gidis-hiisc/esm-dyaku-app": "next"
+      "@pucp-gidis-hiisc/esm-dyaku-app": "next",
+      "@pucp-gidis-hiisc/esm-fua-app": "next"
     },
     "excludedFrontendModules": []
   }
