--- a/distro/distro.properties
+++ b/distro/distro.properties
@@ -35,6 +35,7 @@ omod.bedmanagement=${bedmanagement.version}
 omod.stockmanagement=${stockmanagement.version}
 omod.billing=${billing.version}
 omod.fua=${fua.version}
+omod.sihsalusinterop=${sihsalus-interop.version}
 content.sihsalus=${sihsalus-content.version}
 #omod.oauth2login=${oauth2login.version}
 #omod.datafilter=${datafilter.version}
