--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -57,7 +57,8 @@
     <!-- Stock Management and Billing -->
     <stockmanagement.version>3.0.0-SNAPSHOT</stockmanagement.version>
     <billing.version>1.3.3-SNAPSHOT</billing.version>
-    <fua.version>1.0.48</fua.version>
+    <fua.version>1.0.47</fua.version>
+    <sihsalus-interop.version>1.0.1</sihsalus-interop.version>
     <!-- <imaging.version>1.1.5-SNAPSHOT</imaging.version> -->
     <!-- <appframework.version>2.18.0</appframework.version>-->
     <!-- UI Framework modules (required by imaging)-->
@@ -85,6 +86,12 @@
       <groupId>org.openmrs.module</groupId>
       <artifactId>fua-omod</artifactId>
       <version>${fua.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>sihsalusinterop-omod</artifactId>
+      <version>${sihsalus-interop.version}</version>
+      <scope>provided</scope>
     </dependency>
     <!-- Custom Module: Vaccination Schedule 
     <dependency>
