--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -56,7 +56,7 @@
     <bedmanagement.version>6.2.0-SNAPSHOT</bedmanagement.version>
     <!-- Stock Management and Billing -->
     <stockmanagement.version>3.0.0-SNAPSHOT</stockmanagement.version>
-    <billing.version>1.3.3-SNAPSHOT</billing.version>
+    <billing.version>1.3.2</billing.version>
     <fua.version>1.0.47</fua.version>
     <sihsalus-interop.version>1.0.1</sihsalus-interop.version>
     <!-- <imaging.version>1.1.5-SNAPSHOT</imaging.version> -->
