Actualiza las versiones de los módulos dyaku, fua y maternal-and-child-health a "latest" en spa-assemble-config.json

--- a/frontend/spa-assemble-config.json
+++ b/frontend/spa-assemble-config.json
@@ -43,8 +43,9 @@
       "@openmrs/esm-system-admin-app": "next",
       "@openmrs/esm-user-onboarding-app": "next",
       "@openmrs/esm-ward-app": "next",
-      "@pucp-gidis-hiisc/esm-dyaku-app": "next",
-      "@pucp-gidis-hiisc/esm-fua-app": "next"
+      "@pucp-gidis-hiisc/esm-dyaku-app": "latest",
+      "@pucp-gidis-hiisc/esm-fua-app": "latest",
+      "@pucp-gidis-hiisc/esm-maternal-and-child-health-app": "latest"
     },
     "excludedFrontendModules": []
   }
