Agrega el módulo sihsalus-consulta-externa-app con la versión "latest" en spa-assemble-config.json

--- a/frontend/spa-assemble-config.json
+++ b/frontend/spa-assemble-config.json
@@ -45,7 +45,8 @@
       "@openmrs/esm-ward-app": "next",
       "@pucp-gidis-hiisc/esm-dyaku-app": "latest",
       "@pucp-gidis-hiisc/esm-fua-app": "latest",
-      "@pucp-gidis-hiisc/esm-maternal-and-child-health-app": "latest"
+      "@pucp-gidis-hiisc/esm-maternal-and-child-health-app": "latest",
+      "@pucp-gidis-hiisc/esm-sihsalus-consulta-externa-app": "latest"
     },
     "excludedFrontendModules": []
   }
