--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,6 @@ services:
       FRAME_ANCESTORS: ${FRAME_ANCESTORS:-}
       FUA_CONFIG: ${FUA_CONFIG:-}
       FUA_LOCATIONS: ${FUA_LOCATIONS:-}
-    volumes:
-      - "/var/run/docker.sock:/tmp/docker.sock:ro"
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost/" ]
       interval: 30s
@@ -37,7 +35,10 @@ services:
       SPA_DEFAULT_LOCALE: es
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost/" ]
+      interval: 30s
       timeout: 5s
+      retries: 3
+      start_period: 15s
     depends_on:
       - backend
 
@@ -45,8 +46,6 @@ services:
     container_name: peruHCE-backend
     image: openmrs/openmrs-reference-application-3-backend:${TAG:-qa}
     restart: "unless-stopped"
-    ports:
-      - "8080:8080"
     depends_on:
       - db
     environment:
@@ -76,7 +75,7 @@ services:
     container_name: peruHCE-db-master
     image: mariadb:10.11.7
     restart: "unless-stopped"
-    command: "mariadbd --character-set-server=utf8mb3 --collation-server=utf8mb3_bin --server-id=1 --log-bin=mysql-bin --binlog-format=ROW --sync-binlog=1 --log-slave-updates=1"
+    command: "mariadbd --character-set-server=utf8mb4 --collation-server=utf8mb4_general_ci --server-id=1 --log-bin=mysql-bin --binlog-format=ROW --sync-binlog=1 --log-slave-updates=1"
     healthcheck:
       test: [ "CMD-SHELL", "mariadb --user=${OMRS_DB_USER:-openmrs} --password=${MYSQL_OPENMRS_PASSWORD} --execute 'SHOW DATABASES;'" ]
       interval: 10s
@@ -92,8 +91,8 @@ services:
       OMRS_DB_REPL_PASSWORD: ${OMRS_DB_REPL_PASSWORD}
       OMRS_DB_BACKUP_USER: ${OMRS_DB_BACKUP_USER:-openmrs_backup}
       OMRS_DB_BACKUP_PASSWORD: ${OMRS_DB_BACKUP_PASSWORD}
-    ports:
-      - "3307:3306" # 3307 for host
+    # ports:
+    #   - "3307:3306" # Only expose for debugging; not for production
     volumes:
       - ./scripts/database/db_init_master.sh:/docker-entrypoint-initdb.d/db_init_master.sh
       - db-data:/var/lib/mysql
@@ -102,8 +101,8 @@ services:
   fua-generator:
     container_name: peruHCE-fua-generator
     image: marcelius733/fua-generator:dev-0.1.6
-    ports:
-      - "3333:3000"
+    # ports:
+    #   - "3333:3000" # Only expose for debugging; not for production
     #env_file: "enviromentVariables.env"
     environment:
       DB_USER: ${PERUHCE_FUA_GEN_DB_USER:-fuagenerator}
@@ -124,8 +123,8 @@ services:
   fua-generator-db:
     container_name: peruHCE-fua-generator-db
     image: postgres:17
-    ports:
-      - "5433:5432"
+    # ports:
+    #   - "5433:5432" # Only expose for debugging; not for production
     environment:
       POSTGRES_USER: ${PERUHCE_FUA_GEN_DB_USER:-fuagenerator}
       POSTGRES_PASSWORD: ${PERUHCE_FUA_GEN_DB_PASSWORD:-fuagenerator}
@@ -143,5 +142,4 @@ volumes:
   openmrs-data: ~
   db-data: ~
   db-backup: ~
-  gateway-data: ~
   db-fua-generator: ~
