--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -28,14 +28,14 @@
     <openmrs.version>2.8.3</openmrs.version>
     <initializer.version>2.9.0</initializer.version>
     <fhir2.version>3.0.0-SNAPSHOT</fhir2.version>
-    <webservices.rest.version>3.1.0-SNAPSHOT</webservices.rest.version>
+    <webservices.rest.version>3.1.0</webservices.rest.version>
     <addresshierarchy.version>2.21.0</addresshierarchy.version>
     <patientdocuments.version>1.0.0-SNAPSHOT</patientdocuments.version>
     <idgen.version>4.14.0</idgen.version>
-    <legacyui.version>2.0.0-SNAPSHOT</legacyui.version>
+    <legacyui.version>2.0.0</legacyui.version>
     <metadatamapping.version>2.0.0-SNAPSHOT</metadatamapping.version>
-    <openconceptlab.version>2.6.0-SNAPSHOT</openconceptlab.version>
-    <attachments.version>4.0.0-SNAPSHOT</attachments.version>
+    <openconceptlab.version>2.6.0</openconceptlab.version>
+    <attachments.version>4.0.0</attachments.version>
     <referencedemodata.version>2.6.1-SNAPSHOT</referencedemodata.version>
     <queue.version>2.9.0</queue.version>
     <appointments.version>2.1.0-20250318.070530-1</appointments.version>
@@ -53,7 +53,7 @@
     <o3forms.version>2.3.0</o3forms.version>
     <emrapi.version>3.2.1</emrapi.version>
     <event.version>4.0.0-SNAPSHOT</event.version>
-    <bedmanagement.version>6.2.0-SNAPSHOT</bedmanagement.version>
+    <bedmanagement.version>7.1.0</bedmanagement.version>
     <!-- Stock Management and Billing -->
     <stockmanagement.version>3.0.0-SNAPSHOT</stockmanagement.version>
     <billing.version>1.3.2</billing.version>
