--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.openmrs</groupId>
     <artifactId>distro-emr</artifactId>
-    <version>3.5.0</version>
+    <version>3.6.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>distro-emr-configuration</artifactId>
@@ -25,19 +25,19 @@
 
     <!-- track module versions
          we do so here so that we can utilise Maven to track updates, etc. -->
-    <openmrs.version>2.8.3</openmrs.version>
-    <initializer.version>2.9.0</initializer.version>
+    <openmrs.version>2.8.4-SNAPSHOT</openmrs.version>
+    <initializer.version>2.11.0-SNAPSHOT</initializer.version>
     <fhir2.version>3.0.0-SNAPSHOT</fhir2.version>
-    <webservices.rest.version>3.1.0</webservices.rest.version>
+    <webservices.rest.version>3.1.0-SNAPSHOT</webservices.rest.version>
     <addresshierarchy.version>2.21.0</addresshierarchy.version>
     <patientdocuments.version>1.0.0-SNAPSHOT</patientdocuments.version>
     <idgen.version>4.14.0</idgen.version>
     <legacyui.version>2.0.0</legacyui.version>
     <metadatamapping.version>2.0.0-SNAPSHOT</metadatamapping.version>
-    <openconceptlab.version>2.6.0</openconceptlab.version>
+    <openconceptlab.version>2.6.0-SNAPSHOT</openconceptlab.version>
     <attachments.version>4.0.0</attachments.version>
     <referencedemodata.version>2.6.1-SNAPSHOT</referencedemodata.version>
-    <queue.version>2.9.0</queue.version>
+    <queue.version>3.0.0-SNAPSHOT</queue.version>
     <appointments.version>2.1.0-20250318.070530-1</appointments.version>
     <teleconsultation.version>2.1.0-20250318.154145-1</teleconsultation.version>
     <cohort.version>3.7.3</cohort.version>
