--- a/distro/distro.properties
+++ b/distro/distro.properties
@@ -8,7 +8,7 @@ omod.idgen=${idgen.version}
 omod.legacyui=${legacyui.version}
 omod.addresshierarchy=${addresshierarchy.version}
 omod.patientdocuments=${patientdocuments.version}
-#omod.metadatamapping=${metadatamapping.version}
+omod.metadatamapping=${metadatamapping.version}
 omod.openconceptlab=${openconceptlab.version}
 omod.referencedemodata=${referencedemodata.version}
 omod.attachments=${attachments.version}
