--- a/distro/distro.properties
+++ b/distro/distro.properties
@@ -37,6 +37,7 @@ omod.billing=${billing.version}
 omod.fua=${fua.version}
 omod.sihsalusinterop=${sihsalus-interop.version}
 content.sihsalus=${sihsalus-content.version}
+content.sihsalus.namespace=
 #omod.oauth2login=${oauth2login.version}
 #omod.datafilter=${datafilter.version}
 #omod.vaccination-schedule=${vaccination-schedule.version}
