--- a/e2e_test_support_files/docker-compose-build.yml
+++ b/e2e_test_support_files/docker-compose-build.yml
@@ -31,7 +31,8 @@ services:
       context: ../
     container_name: backend
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
       OMRS_CONFIG_MODULE_WEB_ADMIN: "true"
       OMRS_CONFIG_AUTO_UPDATE_DATABASE: "true"
@@ -54,4 +55,10 @@ services:
       MYSQL_USER: ${OPENMRS_DB_USER:-openmrs}
       MYSQL_PASSWORD: ${OPENMRS_DB_PASSWORD:-openmrs}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-openmrs}
+    healthcheck:
+      test: [ "CMD-SHELL", "mysql --user=${OPENMRS_DB_USER:-openmrs} --password=${OPENMRS_DB_PASSWORD:-openmrs} --execute 'SHOW DATABASES;'" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
