--- a/docker-compose.ssl.yml
+++ b/docker-compose.ssl.yml
@@ -17,7 +17,7 @@ services:
 
       # Certificate configuration
       CERT_WEB_DOMAINS: ${CERT_WEB_DOMAINS:-localhost,127.0.0.1,192.168.0.200,sihsalus.hsc,openmrs.sihsalus.hsc}
-      CERT_WEB_DOMAIN_COMMON_NAME: ${CERT_WEB_DOMAIN_COMMON_NAME:-sihsalus.hsc}
+      CERT_WEB_DOMAIN_COMMON_NAME: ${CERT_WEB_DOMAIN_COMMON_NAME:-localhost}
 
       # Certificate parameters
       CERT_RSA_KEY_SIZE: ${CERT_RSA_KEY_SIZE:-4096}
@@ -45,7 +45,7 @@ services:
       - "443:443"
     environment:
       # Enable SSL configuration
-      CERT_WEB_DOMAIN_COMMON_NAME: ${CERT_WEB_DOMAIN_COMMON_NAME:-sihsalus.hsc}
+      CERT_WEB_DOMAIN_COMMON_NAME: ${CERT_WEB_DOMAIN_COMMON_NAME:-localhost}
       FRAME_ANCESTORS: ${FRAME_ANCESTORS:-https://dyaku.minsa.gob.pe/fhir}
     volumes:
       # Mount certificate directories
