--- a/gateway/default-ssl.conf.template
+++ b/gateway/default-ssl.conf.template
@@ -47,7 +47,7 @@ server {
 server {
   listen 443 ssl http2;
   listen [::]:443 ssl http2;
-  server_name 127.0.0.1 192.168.0.200 localhost sihsalus.hsc openmrs.sihsalus.hsc;
+  server_name ${CERT_WEB_DOMAIN_COMMON_NAME} localhost 127.0.0.1 _;
 
   # SSL configuration
   ssl_certificate     /etc/letsencrypt/live/${CERT_WEB_DOMAIN_COMMON_NAME}/fullchain.pem;
