--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -32,10 +32,10 @@
     <addresshierarchy.version>2.21.0</addresshierarchy.version>
     <patientdocuments.version>1.0.0-SNAPSHOT</patientdocuments.version>
     <idgen.version>4.14.0</idgen.version>
-    <legacyui.version>2.0.0-SNAPSHOT</legacyui.version>
+    <legacyui.version>2.0.0</legacyui.version>
     <metadatamapping.version>2.0.0-SNAPSHOT</metadatamapping.version>
     <openconceptlab.version>2.6.0-SNAPSHOT</openconceptlab.version>
-    <attachments.version>4.0.0-SNAPSHOT</attachments.version>
+    <attachments.version>4.0.0</attachments.version>
     <referencedemodata.version>2.6.1-SNAPSHOT</referencedemodata.version>
     <queue.version>3.0.0-SNAPSHOT</queue.version>
     <appointments.version>2.1.0-20250318.070530-1</appointments.version>
