--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,4 @@
-﻿# Forzar LF en todos los archivos de texto relevantes para Linux/Docker
-*.sh text eol=lf
+﻿*.sh text eol=lf
 *.yml text eol=lf
 *.yaml text eol=lf
 Dockerfile text eol=lf
