feat: add esm-indicators-app to frontend modules

--- a/frontend/spa-assemble-config.json
+++ b/frontend/spa-assemble-config.json
@@ -47,6 +47,7 @@
       "@pucp-gidis-hiisc/esm-dyaku-app": "latest",
       "@pucp-gidis-hiisc/esm-fua-app": "latest",
       "@pucp-gidis-hiisc/esm-maternal-and-child-health-app": "latest",
+      "@pucp-gidis-hiisc/esm-indicators-app": "latest",
       "@pucp-gidis-hiisc/esm-sihsalus-consulta-externa-app": "latest"
     },
     "excludedFrontendModules": []
