agregar repositorios openmrs-repo y openmrs-repo-snapshots al archivo settings.xml.template

--- a/credentials/settings.xml.template
+++ b/credentials/settings.xml.template
@@ -17,6 +17,20 @@
           <url>https://repo1.maven.org/maven2</url>
         </repository>
         <repository>
+          <id>openmrs-repo</id>
+          <url>https://mavenrepo.openmrs.org/public</url>
+        </repository>
+        <repository>
+          <id>openmrs-repo-snapshots</id>
+          <url>https://mavenrepo.openmrs.org/snapshots</url>
+          <snapshots>
+            <enabled>true</enabled>
+          </snapshots>
+          <releases>
+            <enabled>false</enabled>
+          </releases>
+        </repository>
+        <repository>
           <id>github</id>
           <url>https://maven.pkg.github.com/PROYECTO-SANTACLOTILDE/openmrs-module-peruHCE</url>
           <snapshots>
