--- a/.github/workflows/e2e-on-release.yml
+++ b/.github/workflows/e2e-on-release.yml
@@ -26,16 +26,16 @@ jobs:
 
       - name: Extract version numbers from the spa-build-config.json file
         id: refs
-        run: bash e2e_test_support_files/extract_tag_numbers.sh
+        run: bash tests/e2e/extract_tag_numbers.sh
 
       - name: Build and Run Containers
-        run: docker compose -f e2e_test_support_files/docker-compose-build.yml up -d
+        run: docker compose -f tests/e2e/docker-compose-build.yml up -d
 
       - name: Wait for the backend to start
         run: while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' http://localhost/openmrs/login.htm)" != "200" ]]; do sleep 10; done
 
       - name: Commit and export Containers
-        run: sh e2e_test_support_files/commit_and_export_images.sh
+        run: bash tests/e2e/commit_and_export_images.sh
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -68,7 +68,7 @@ jobs:
 
       - name: Spin up an OpenMRS Instance
         run: docker compose up -d
-        working-directory: e2e_test_support_files
+        working-directory: tests/e2e
 
       - name: Checkout to the Repo's Tag
         uses: actions/checkout@v4
@@ -129,7 +129,7 @@ jobs:
 
       - name: Spin up an OpenMRS Instance
         run: docker compose up -d
-        working-directory: e2e_test_support_files
+        working-directory: tests/e2e
 
       - name: Checkout to the Repo's Tag
         uses: actions/checkout@v4
@@ -190,7 +190,7 @@ jobs:
 
       - name: Spin up an OpenMRS Instance
         run: docker compose up -d
-        working-directory: e2e_test_support_files
+        working-directory: tests/e2e
 
       - name: Checkout to the Repo's Tag
         uses: actions/checkout@v4
@@ -251,7 +251,7 @@ jobs:
 
       - name: Spin up an OpenMRS Instance
         run: docker compose up -d
-        working-directory: e2e_test_support_files
+        working-directory: tests/e2e
 
       - name: Checkout to the Repo's Tag
         uses: actions/checkout@v4
@@ -312,7 +312,7 @@ jobs:
 
       - name: Spin up an OpenMRS Instance
         run: docker compose up -d
-        working-directory: e2e_test_support_files
+        working-directory: tests/e2e
 
       - name: Checkout to the Repo's Tag
         uses: actions/checkout@v4
@@ -373,7 +373,7 @@ jobs:
 
       - name: Spin up an OpenMRS Instance
         run: docker compose up -d
-        working-directory: e2e_test_support_files
+        working-directory: tests/e2e
 
       - name: Checkout to the Repo's Tag
         uses: actions/checkout@v4
