--- a/.github/workflows/e2e-tests-on-commit.yml
+++ b/.github/workflows/e2e-tests-on-commit.yml
@@ -15,13 +15,20 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Build and Run Containers
-        run: docker compose -f e2e_test_support_files/docker-compose-build.yml up -d
+        run: docker compose -f tests/e2e/docker-compose-build.yml up -d
 
       - name: Wait for the backend to start
         run: while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' http://localhost/openmrs/login.htm)" != "200" ]]; do sleep 10; done
 
       - name: Commit and export Containers
-        run: sh e2e_test_support_files/commit_and_export_images.sh
+        run: bash tests/e2e/commit_and_export_images.sh
+
+      - name: Verify artifact was created
+        run: |
+          if [[ ! -f e2e_release_env_images.tar.gz ]]; then
+            echo "ERROR: e2e_release_env_images.tar.gz not found"
+            exit 1
+          fi
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -29,16 +36,17 @@ jobs:
           name: e2e_release_env_images
           path: e2e_release_env_images.tar.gz
           retention-days: 1
-          
-      - name: 📝 Capture Server Logs
-        if: always()
+          if-no-files-found: error
+
+      - name: Capture Server Logs
+        if: failure()
         uses: jwalton/gh-docker-logs@v2
         with:
           dest: "./logs"
 
-      - name: 📤 Upload Logs as Artifact
+      - name: Upload Logs as Artifact
         uses: actions/upload-artifact@v4
-        if: always()
+        if: failure()
         with:
           name: server-logs-build-backend
           path: "./logs"
@@ -81,7 +89,7 @@ jobs:
 
       - name: Spin up an OpenMRS Instance
         run: docker compose up -d
-        working-directory: e2e_test_support_files
+        working-directory: tests/e2e
 
       - name: Checkout to the repo's main branch
         uses: actions/checkout@v4
@@ -118,15 +126,15 @@ jobs:
           path: e2e_repo/playwright-report/
           retention-days: 30
 
-      - name: 📝 Capture Server Logs
-        if: always()
+      - name: Capture Server Logs
+        if: failure()
         uses: jwalton/gh-docker-logs@v2
         with:
           dest: "./logs"
 
-      - name: 📤 Upload Logs as Artifact
+      - name: Upload Logs as Artifact
         uses: actions/upload-artifact@v4
-        if: always()
+        if: failure()
         with:
           name: server-logs-${{ matrix.repo }}
           path: "./logs"
