--- a/monitoring/loki/loki-config.yml
+++ b/monitoring/loki/loki-config.yml
@@ -1,10 +1,11 @@
 # Loki Configuration for PeruHCE
+# Based on upstream OpenMRS with SIHSALUS customizations (30-day retention)
 auth_enabled: false
 
 server:
   http_listen_port: 3100
   grpc_listen_port: 9096
-  log_level: info
+  log_level: warn
 
 common:
   path_prefix: /loki
@@ -39,12 +40,44 @@ storage_config:
 limits_config:
   retention_period: 720h
   max_query_lookback: 720h
-  reject_old_samples: true
-  reject_old_samples_max_age: 168h
+
+  # Rate limits
+  ingestion_rate_strategy: global
   ingestion_rate_mb: 10
   ingestion_burst_size_mb: 20
-  per_stream_rate_limit: 10MB
-  per_stream_rate_limit_burst: 20MB
+  per_stream_rate_limit: 3MB
+  per_stream_rate_limit_burst: 15MB
+
+  # Stream limits
+  max_global_streams_per_user: 10000
+  max_streams_per_user: 0
+
+  # Validation
+  max_line_size: 256KB
+  max_line_size_truncate: false
+  max_label_name_length: 1024
+  max_label_value_length: 2048
+  max_label_names_per_series: 15
+
+  # Time constraints
+  reject_old_samples: true
+  reject_old_samples_max_age: 168h
+  creation_grace_period: 10m
+  unordered_writes: true
+
+ingester:
+  # Chunk settings
+  chunk_idle_period: 30m
+  chunk_target_size: 1572864  # 1.5 MB
+  chunk_encoding: snappy
+  max_chunk_age: 2h
+
+  # WAL settings
+  wal:
+    enabled: true
+    dir: /loki/wal
+    checkpoint_duration: 5m
+    flush_on_shutdown: true
 
 compactor:
   working_directory: /loki/compactor
