Actualizar logotipos y colores de marca en la configuración de OpenMRS

--- a/frontend/config/config-openmrs.json
+++ b/frontend/config/config-openmrs.json
@@ -10,8 +10,8 @@
             }
         },
         "logo": {
-            "alt": "Patient Chart Logo",
-            "src": "${openmrsSpaBase}/primary-logo.png"
+            "alt": "SIHSALUS",
+            "src": "${openmrsSpaBase}/alternative-logo.png"
         },
         "visitAttributeTypes": [
             {
@@ -93,9 +93,10 @@
         ]
     },
     "@openmrs/esm-styleguide": {
-        "Brand color #1": "#2C2F79",
-        "Brand color #2": "#27406A",
-        "Brand color #3": "#0E5E86"
+        "Brand color #1": "#27348b",
+        "Brand color #2": "#2C2F79",
+        "Brand color #3": "#52ae32",
+        "implementationName": "SIHSALUS"
     },
     "@openmrs/esm-patient-tests-app": {
         "showReferenceNumberField": false,
@@ -159,13 +160,14 @@
     "@openmrs/esm-login-app": {
         "logo": {
             "src": "${openmrsSpaBase}/login-logo.svg",
-            "alt": "Logo"
-        }
+            "alt": "SIHSALUS"
+        },
+        "showPasswordOnSeparateScreen": false
     },
     "@openmrs/esm-primary-navigation-app": {
         "logo": {
-            "src": "${openmrsSpaBase}/primary-logo.png",
-            "alt": "Nav Logo"
+            "src": "${openmrsSpaBase}/alternative-logo.png",
+            "alt": "SIHSALUS"
         }
     },
     "@openmrs/esm-patient-medications-app": {
