--- a/frontend/spa-build-config.json
+++ b/frontend/spa-build-config.json
@@ -1,9 +1,12 @@
 {
   "spaPath": "$SPA_PATH",
   "apiUrl": "$API_URL",
-  "configUrls": ["$SPA_CONFIG_URLS"],
+  "configUrls": [
+    "$SPA_CONFIG_URLS"
+  ],
   "defaultLocale": "$SPA_DEFAULT_LOCALE",
   "importmap": "$SPA_PATH/importmap.json",
   "routes": "$SPA_PATH/routes.registry.json",
-  "supportOffline": true
+  "supportOffline": true,
+  "pageTitle": "SIH SALUS"
 }
