--- a/distro/distro.properties
+++ b/distro/distro.properties
@@ -10,7 +10,7 @@ omod.addresshierarchy=${addresshierarchy.version}
 omod.patientdocuments=${patientdocuments.version}
 omod.metadatamapping=${metadatamapping.version}
 omod.openconceptlab=${openconceptlab.version}
-omod.referencedemodata=${referencedemodata.version}
+#omod.referencedemodata=${referencedemodata.version}
 omod.attachments=${attachments.version}
 omod.queue=${queue.version}
 omod.appointments=${appointments.version}
