--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -201,12 +201,14 @@
       <version>${attachments.version}</version>
       <scope>provided</scope>
     </dependency>
+    <!-- Removed: creates demo locations (Amani Hospital, Site 1-50, etc.) and demo patients
     <dependency>
       <groupId>org.openmrs.module</groupId>
       <artifactId>referencedemodata-omod</artifactId>
       <version>${referencedemodata.version}</version>
       <scope>provided</scope>
     </dependency>
+    -->
     <dependency>
       <groupId>org.openmrs.module</groupId>
       <artifactId>queue-omod</artifactId>
